# pancake-making-machine

./: README.md  tmp_mouser_jina.txt  tmp_mouser_out.txt
.github/workflows/: plantuml-render.yml
docs/: operator_manual.md
docs/architecture/: control_hmi_logger.puml  control_hmi_logging.puml  control_overview.pump  control_overview_modules.puml  control_pump_dispense.md  control_pump_dispense.puml  control_safety_chain.puml  control_safety_chain.pump  control_temp_loop.puml  control_theta_motion.puml  system_overview.puml
docs/architecture/drawio/: system_design_overview.drawio
docs/specs/: MECHANICAL_DESIGN.md  POC_HARDWARE_BOM.md  PRD.md  SRS.md  traceability.csv
firmware/: BUILD_AND_INTEGRATION.md  CONTROL_SOFTWARE.md  IMPLEMENTATION_SUMMARY.md  STATE_MACHINE.md
firmware/stm32f446re/: .cproject  .mxproject  .project  SETUP_SUMMARY.md  pancake-making-machine.ioc  pancake-making-machine.launch  pancake-making-machine.txt
firmware/stm32f446re/Core/: CMakeLists.txt  IOC_CONFIGURATION_GUIDE.md  README.md
firmware/stm32f446re/Core/Inc/: FreeRTOSConfig.h  control_system.h  hmi.h  logging.h  main.h  motion_control.h  motion_control_test.h  pump_control.h  safety_control.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  thermal_control.h
firmware/stm32f446re/Core/Src/: control_system.c  hmi.c  logging.c  main.c  motion_control.c  motion_control_test.c  pump_control.c  safety_control.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  thermal_control.c
firmware/stm32f446re/Debug/: makefile  objects.list  pancake-making-machine.elf  pancake-making-machine.list  pancake-making-machine.map  sources.mk
firmware/stm32f446re/Debug/Core/Src/: control_system.cyclo  control_system.d  control_system.su  freertos.d  hmi.cyclo  hmi.d  hmi.su  logging.cyclo  logging.d  logging.su  main.cyclo  main.d  main.su  motion_control.cyclo  motion_control.d  motion_control.su  pump_control.cyclo  pump_control.d  pump_control.su  safety_control.cyclo  safety_control.d  safety_control.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  syscalls.cyclo  syscalls.su  thermal_control.cyclo  thermal_control.d  thermal_control.su
firmware/stm32f446re/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_uart.cyclo  stm32f4xx_hal_uart.su  subdir.mk
firmware/stm32f446re/Debug/FreeRTOS/FreeRTOS/Source/: subdir.mk
firmware/stm32f446re/Debug/FreeRTOS/FreeRTOS/Source/portable/GCC/ARM_CM4F/: subdir.mk
firmware/stm32f446re/Debug/FreeRTOS/FreeRTOS/Source/portable/MemMang/: subdir.mk
firmware/stm32f446re/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_uart.h
firmware/stm32f446re/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_uart.c
firmware/stm32f446re/config/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
firmware/stm32f446re/src/: hmi_logger.h  main.c  motion_control.h  pump_control.h  safety.h  thermal_control.h
